This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.8.6
  Reduce executable sizes (#2003203)
  Release Notes update (#2007673)
  BugFix: Always right side as origin side in copy confirmation dialog
    when Copy To... (#2001237)
  BugFix: Possible crash when enabling line filter (#2004160)
  BugFix: Moving was allowed for protected items (#2023734)
  BugFix: Could change EOL style for protected file (#2025781)
  New translation: Slovenian (#1997236)
  Translation updates:
  - Chinese Traditional (#2007426)

WinMerge 2.8.4 - 2008-06-17 (r5496)
  Release Notes update (#1995265)
  BugFix: Crash when starting a second instance (#1993835)
  BugFix: Crash when starting WinMerge with only one path (#1994402)
  Translation updates:
  - Brazilian (#1994578)

WinMerge 2.8.2 - 2008-06-12 (r5478)
  Release Notes update (#1933950, #1990886)
  Make 'Yes' the default button in copy confirmation dialog (#1943647)
  Allow drag & drop of paths to Open dialog (#1945254)
  Enlarge 'Discard All' button in Save confirmation dialog (#1947216)
  Tab icons at Filter dialog (#1926531)
  Add VB.net keywords to Basic highlighter (#1970912)
  Manual: Use PNG files (#1988845, #1989744)
  BugFix: Shortcuts given in command line were not expanded (#1942217)
  BugFix: Version Control filter did not match all VSS files (#1881186)
  BugFix: Fix command line paths in quotes ending with "\" (#1963523)
  BugFix: Command line description text starting with "/" confused
    WinMerge (#1973225)
  BugFix: Fix showing differences in the end of the line (#1883409, #1962816)
  BugFix: Item count in statusbar not get cleared (#1976480)
  BugFix: ISL file syntax highlighting starts comment with { (#1981326)
  BugFix: Workaround for WinMerge not exiting for some users (#1602313)
  BugFix: Temp paths in Reports created from archive file (#1984346)
  New translation: Greek (#1968429)