@@ -5,6 +5,7 @@ to Subversion revision numbers (rXXXXX).
 WinMerge 2.8.6
   Reduce executable sizes (#2003203)
   Release Notes update (#2007673)
+  Clarify Supercopier caused hang in release notes (#2030040)
   BugFix: Always right side as origin side in copy confirmation dialog
     when Copy To... (#2001237)
   BugFix: Possible crash when enabling line filter (#2004160)
